diplom/file/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-state-ingress
  namespace: monitoring
  labels:
    name: kube-state-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.diplom.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kube-prom-stack-grafana
            port:
              number: 80
